--- a/services/discovery/src/main/resources/application.yml
+++ b/services/discovery/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
     config:
       import: optional:configserver:http://localhost:8888
     application:
-      name: discovery-servic
+      name: discovery-service
 
 eureka:
   instance:
