--- a/services/config-server/src/main/resources/configurations/application.yml
+++ b/services/config-server/src/main/resources/configurations/application.yml
@@ -3,8 +3,8 @@ eureka:
     hostname: localhost
   client:
     service-url:
-      defaultZone: http:localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka
 spring:
   cloud:
     config:
-      override.system-properties: false
+      override-system-properties: false
