Finishing order microservice

--- a/services/config-server/src/main/resources/configurations/payment-service.yml
+++ b/services/config-server/src/main/resources/configurations/payment-service.yml
@@ -15,3 +15,5 @@ kafka:
     value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     properties:
       spring.json.type.mapping: paymentConfirmation:com.ags.ecommerce.kafka.PaymentNotificationRequest
+server:
+  port: 8060
