--- a/services/config-server/src/main/resources/configurations/payment-service.yml
+++ b/services/config-server/src/main/resources/configurations/payment-service.yml
@@ -5,7 +5,7 @@ datasource:
   password: ags
 jpa:
   hibernate:
-    ddl-auto: validate
+    ddl-auto: update
   database: postgresql
   database-platform: org.hibernate.dialect.PostgreSQLDialect
 kafka:
